apps/base/blog/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  labels:
    app: blog
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: blog
          port: http
  tls:
    secretName: ${CERT_SECRET_INTERNAL}
